finally the project is compleated

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 * Web Development Batch 2
 * Assignment 6 (Calculation Master Web Application)
 * Live Link:- https://asf-wd-assignment6.netlify.app/
-* Assignment Submit Date:- May 2024
+* Assignment Submit Date:- 26 May 2024
 * Name:-  Md Mamun Hossain 
 * Discord User Name:- gmmamunh
 * Gmail:- gmmamun3004@gmail.com
